# resume-generator

./: .gitignore  README.md  docker-compose.yml
.docker/: Dockerfile.dev
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  resume.md  tauri.conf.json
src-tauri/src/: main.rs  template_rag.rs
